--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="cssbootstrap/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <title>Pizzeria Lobato</title>
 </head>
 <body>
     <header class="header">
         <img src="imagenes/logo.png" alt="">
         <nav>
-            <ul>
+            <ul class="navbar-nav-scroll">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="page/contacto.html">Contacto</a></li>
                 <li><a href="page/productos.html">Productos</a></li>
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main class="main">
-        <section class="hero">
+        <section class="heros">
             <h1>Pizzeria Lobato</h1>
             <p>Nuestra pizza no es sólo Alimento, es un Sentimiento!</p>
             <a href="page/nosotros.html">Conoceme</a>
