--- a/index.html
+++ b/index.html
@@ -15,16 +15,32 @@
     <title>Pizzeria Lobato</title>
 </head>
 <body>
-    <header class="header">
-        <img src="imagenes/logo.png" alt="">
-        <nav>
-            <ul class="navbar-nav-scroll">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="page/contacto.html">Contacto</a></li>
-                <li><a href="page/productos.html">Productos</a></li>
-                <li><a href="page/franquicias.html">Franquicias</a></li>
-                <li><a href="page/nosotros.html">Nosotros</a></li>
-            </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+                <img src="imagenes/logo.png" width="70px" alt="">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="page/contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="page/productos.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="page/franquicias.html">Franquicias</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="page/nosotros.html">Nosotros</a>
+                </li>
+            </div>
+        </div>
         </nav>
     </header>
     <main class="main">
