--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    <a class="nav-link active" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="page/contacto.html">Contacto</a>
@@ -54,7 +54,7 @@
             <div class="col">
                 <div style="width: 18rem;">
                     <img src="imagenes/1-icono-pizza-01-1.png" alt="">
-                    <div class="card-body">
+                    <div> class="card-body">
                     <h5 class="card-title">Artesanal y a la vista</h5>
                     <p class="card-text">Todos nuestros productos son elaborados cada día con ingredientes de primerísima calidad!</p>
                     </div>
