--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="col">
                 <div style="width: 18rem;">
                     <img src="imagenes/1-icono-pizza-01-1.png" alt="">
-                    <div> class="card-body">
+                    <div class="card-body">
                     <h5 class="card-title">Artesanal y a la vista</h5>
                     <p class="card-text">Todos nuestros productos son elaborados cada día con ingredientes de primerísima calidad!</p>
                     </div>
