--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0 text-end">
                 <li class="nav-item">
                     <a class="nav-link active" href="index.html">Inicio</a>
                 </li>
@@ -49,10 +49,10 @@
             <p>Nuestra pizza no es sólo Alimento, es un Sentimiento!</p>
             <a href="page/nosotros.html">Conoceme</a>
         </section>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-            <div class="col">
-                <div style="width: 18rem;">
+            <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
+                <div style="width:18rem;">
                     <img src="imagenes/1-icono-pizza-01-1.png" alt="">
                     <div class="card-body">
                     <h5 class="card-title">Artesanal y a la vista</h5>
@@ -60,17 +60,17 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-sm-12 col-lg-6 d-flex justify-content-center">
                 <div style="width: 18rem;">
                     <img src="imagenes/2-icono-ingredientes-01-2.png" alt="">
                     <div class="card-body">
-                    <h5 class="card-title">Sabores que enamoran</h5>
-                    <p class="card-text">Elegimos cuidadosamente los ingredientes de cada producto para que te enamores!</p>
+                    <h5 class="">Sabores que enamoran</h5>
+                    <p class="">Elegimos cuidadosamente los ingredientes de cada producto para que te enamores!</p>
                     </div>
                 </div>
             </div>
-            <div class="col">
-                <div style="width: 18rem;">
+            <div class="col-sm-12 col-lg-3 d-flex justify-content-center">
+                <div style="width:18rem;">
                     <img src="imagenes/3-icono-porcion-01-2.png" alt="">
                     <div class="card-body">
                     <h5 class="card-title">Porción de Cortesía</h5>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             </div>
-        </div>
+        </div>>
         <section class="section_two">
                 <h3 class="tituloParrafo">+ DE 40 GUSTOS!</h3>
                 <p class="parrafo1">100% MERCADERÍA FRESCA</p>
